--- a/api/package.json
+++ b/api/package.json
@@ -19,9 +19,11 @@
     "grunt-sails-linker": "~0.10.1",
     "grunt-sync": "0.2.4",
     "include-all": "~0.1.6",
+    "node-validator": "^0.1.22",
     "rc": "1.0.1",
     "sails": "~0.12.3",
-    "sails-disk": "~0.10.9"
+    "sails-disk": "~0.10.9",
+    "sails-mysql": "^0.12.1"
   },
   "scripts": {
     "debug": "node debug app.js",
@@ -33,5 +35,8 @@
     "url": "git://github.com/farandal/api.git"
   },
   "author": "farandal",
-  "license": ""
+  "license": "",
+  "devDependencies": {
+    "bluebird": "^3.3.5"
+  }
 }
