changed github url from backend api package

--- a/api/package.json
+++ b/api/package.json
@@ -49,7 +49,7 @@
   "main": "app.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/farandal/api.git"
+    "url": "git://github.com/farandal/exercise.git"
   },
   "author": "farandal",
   "license": "",
