--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,10 +52,19 @@
     "postversion": "git push && git push --tags"
   },
   "dependencies": {
+    "@angular/common": "2.0.0-rc.1",
+    "@angular/compiler": "2.0.0-rc.1",
+    "@angular/core": "2.0.0-rc.1",
+    "@angular/http": "2.0.0-rc.1",
+    "@angular/platform-browser": "2.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
+    "@angular/platform-server": "2.0.0-rc.1",
+    "@angular/router": "2.0.0-rc.1",
+    "@angular/router-deprecated": "2.0.0-rc.1",
     "@angular2-material/button": "2.0.0-alpha.3",
-    "@angular2-material/card": "2.0.0-alpha.3",
-    "@angular2-material/checkbox": "2.0.0-alpha.3",
-    "@angular2-material/core": "2.0.0-alpha.3",
+    "@angular2-material/card": "^2.0.0-alpha.3",
+    "@angular2-material/checkbox": "^2.0.0-alpha.3",
+    "@angular2-material/core": "^2.0.0-alpha.3",
     "@angular2-material/input": "2.0.0-alpha.3",
     "@angular2-material/list": "2.0.0-alpha.3",
     "@angular2-material/progress-bar": "2.0.0-alpha.3",
@@ -63,21 +72,12 @@
     "@angular2-material/radio": "2.0.0-alpha.3",
     "@angular2-material/sidenav": "2.0.0-alpha.3",
     "@angular2-material/toolbar": "2.0.0-alpha.3",
-    "@angular/http": "2.0.0-rc.1",
-    "@angular/common": "2.0.0-rc.1",
-    "@angular/compiler": "2.0.0-rc.1",
-    "@angular/core": "2.0.0-rc.1",
-    "@angular/platform-browser": "2.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
-    "@angular/platform-server": "2.0.0-rc.1",
-    "@angular/router": "2.0.0-rc.1",
-    "@angular/router-deprecated": "2.0.0-rc.1",
     "core-js": "^2.2.2",
+    "less": "^2.6.1",
+    "less-loader": "^2.2.3",
     "normalize.css": "^4.1.1",
     "rxjs": "5.0.0-beta.6",
-    "zone.js": "~0.6.12",
-    "less": "^2.6.1",
-    "less-loader": "^2.2.3"
+    "zone.js": "~0.6.12"
   },
   "devDependencies": {
     "angular2": "2.0.0-beta.17",
