fix issues for production

--- a/api/package.json
+++ b/api/package.json
@@ -42,7 +42,8 @@
   "scripts": {
     "debug": "node debug app.js",
     "start": "node app.js",
-    "test": "node ./node_modules/mocha/bin/mocha test/bootstrap.test.js test/integration/**/*.test.js"
+    "test": "node ./node_modules/mocha/bin/mocha test/bootstrap.test.js test/integration/**/*.test.js",
+    "prod" : "node app.js --silent --port=8089 --prod"
   },
   "main": "app.js",
   "repository": {
