--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
     "tslint": "tslint",
     "typedoc": "typedoc",
     "typings": "typings",
-    "webpack": "webpack",
+    "webpack": "/home/farandal/.nvm/versions/v0.12.9/bin/webpack",
     "webpack-dev-server": "webpack-dev-server",
     "webdriver-manager": "webdriver-manager",
     "protractor": "protractor",
@@ -27,9 +27,9 @@
     "watch:prod": "npm run build:prod -- --watch",
     "build": "npm run build:dev",
     "prebuild:dev": "npm run clean:dist",
-    "build:dev": "webpack --config config/webpack.dev.js --progress --profile --colors --display-error-details --display-cached",
+    "build:dev": "/home/farandal/.nvm/versions/v0.12.9/bin/webpack --config config/webpack.dev.js --progress --profile --colors --display-error-details --display-cached",
     "prebuild:prod": "npm run clean:dist",
-    "build:prod": "webpack --config config/webpack.prod.js  --progress --profile --colors --display-error-details --display-cached --bail",
+    "build:prod": "/home/farandal/.nvm/versions/v0.12.9/bin/webpack --config config/webpack.prod.js  --progress --profile --colors --display-error-details --display-cached",
     "server": "npm run server:dev",
     "server:dev": "webpack-dev-server --config config/webpack.dev.js --inline --progress --profile --colors --watch --display-error-details --display-cached --content-base src/",
     "server:dev:hmr": "npm run server:dev -- --hot",
